argo/base/manifests/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 200m
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: project-postgres-data
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: project-postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
