argo/base/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: todo-gateway
  namespace: project
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-httproute
  namespace: project
spec:
  parentRefs:
    - name: todo-gateway
  rules:
    - backendRefs:
        - name: todo-app-svc
          port: 3000
